plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.dependency.management)
}

group = 'tur.oxus'
version = '0.0.1-SNAPSHOT'
description = 'bookhub'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    mockitoAgent {
        canBeResolved = true  // Utilisé pour résoudre des fichiers JAR (e.g. testRuntimeClasspath)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // JUnit
    testImplementation platform(libs.junit.bom)
    testImplementation libs.junit.jupiter
    testRuntimeOnly libs.junit.platform.launcher

    // MS SQL Server driver for JDBC (SQLServerDriver doit être visible dès le chargement de l'application car
    // Spring Boot auto-configure la DataSource au démarrage (`implementation` est actif lors de la phase de compilation)
    implementation libs.mssql.jdbc

    // Spring Boot
    implementation libs.spring.boot.starter.actuator
    implementation libs.spring.boot.starter.thymeleaf
    implementation libs.spring.boot.starter.webmvc
    implementation libs.spring.boot.starter.validation
    implementation libs.spring.boot.starter.jdbc
    implementation libs.spring.boot.starter.data.jpa

    // Spring Security
    implementation libs.spring.boot.starter.security
    implementation libs.thymeleaf.extras.springsecurity6

    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    // DevTools
    developmentOnly libs.spring.boot.devtools

    // Test Spring Boot
    testImplementation libs.spring.boot.starter.test
    // Test Spring Security
    testImplementation libs.spring.security.test
    // Test Spring Data JPA
    testImplementation libs.spring.boot.starter.data.jpa.test

    // Mockito (explicit for agent
    testImplementation libs.mockito.core
    mockitoAgent(libs.mockito.core) {
        transitive = false
    }

    // JUnit
    testRuntimeOnly libs.junit.platform.launcher

    // H2 RAM-based database (for tests only)
    testImplementation libs.h2
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += [
            "-javaagent:${configurations.mockitoAgent.asPath}"
    ]
}

tasks.withType(JavaCompile).configureEach {
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
}